src/test/deca/context/invalid/homemade/unknown_variable.deca
// trying to call unknown identifier

{
    int x = 4;
    x = y;
}